# ProjectForge

./: .gitignore  AGENTS.md  CONSTITUTION.md  README.md  _SUMMARY.md  projectforge.yaml  pyproject.toml
MetaHarvest/: CONSTITUTION.md  INTEGRATION.md  README.md  _SUMMARY.md  source_registry.yaml
agents/: _SUMMARY.md  auditor.md  bootstrapper.md  coder.md  context_manager.md  model_router.md  planner.md  researcher.md  reviewer.md  summarizer.md
artifacts/: _SUMMARY.md
automation/: _SUMMARY.md  orchestration_schedule.yaml
confidence/: _SUMMARY.md
config/: _SUMMARY.md  setup_questionnaire.yaml
context/: _SUMMARY.md  context_manifest.yaml  context_policy.yaml  latest_handoff.md  project_creation_answers_macroforge.json  project_summary.md
docs/: METAHARVEST_INTEGRATION.md  OPERATOR_MANUAL.md  _SUMMARY.md
examples/: _SUMMARY.md  answers.example.json
hardware/: _SUMMARY.md  profile.yaml  resource_policy.yaml
instructions/: FOLDER_SUMMARY_POLICY.md  GENERAL_INSTRUCTIONS.md  PROJECTFORGE_SELF_MANAGEMENT.md  _SUMMARY.md
knowledge/: _SUMMARY.md  components.yaml  dependencies.yaml
logs/: _SUMMARY.md  logging_policy.yaml
memory/: _SUMMARY.md  retention_policy.yaml
metrics/: _SUMMARY.md  metrics_policy.yaml
models/: _SUMMARY.md  registry.yaml  routing.yaml  selection_policy.yaml
permissions/: _SUMMARY.md  allowlist.yaml
policies/: _SUMMARY.md
question_queue/: _SUMMARY.md
recovery/: _SUMMARY.md  continuity_framework.md  escalation_policy.yaml  failure_playbooks.md  incident_log.md
simulation/: _SUMMARY.md  dry_run_policy.yaml  dry_run_schema.yaml
(+807 files in other folders)
